--- a/styles.css
+++ b/styles.css
@@ -28,6 +28,10 @@ body{
     box-sizing: border-box;
 }
 
+.timer{
+    margin: auto;
+}
+
 .team-bans{
     display: flex;
     margin: auto 5px auto 5px;
@@ -170,6 +174,10 @@ body{
     border: solid;
     height: 40px;
     width: 40px;
+}
+
+.all-champion-box img{
+    height: 40px;
 }
 
 .all-champion-name{
