--- a/styles.css
+++ b/styles.css
@@ -174,6 +174,9 @@ body{
     border: solid;
     height: 40px;
     width: 40px;
+    padding: 0;
+    display: block;
+    box-sizing: content-box;
 }
 
 .all-champion-box img{
