--- a/styles.css
+++ b/styles.css
@@ -80,6 +80,10 @@ body{
     border-right: 0px;
 }
 
+.active{
+    background-color: blue;
+}
+
 .champion-portrait{
     border: solid;
     border-radius: 50%;
